# tace.chat

./: .gitignore  CNAME  Cargo.toml  Dockerfile  Dockerfile.collector  Dockerfile.node  Dockerfile.webclient  GEMINI.md  INSTRUCTIONS.md  LICENSE  README.md  ROADMAP.md  RUNNING_A_NODE.md  TERMS_AND_CONDITIONS.md  docker-compose.yml  index.html  main.js  nginx.conf  styles.css
.github/workflows/: docker-build.yml  github-pages.yml  kubernetes-deploy.yml
collector/: Cargo.toml
collector/src/: api.rs  db.rs  main.rs  metrics_fetcher.rs
k8s/: collector.yaml  ingress.yaml  namespace.yaml  node.yaml  pvc.yaml
lib/: Cargo.toml
lib/src/: dht_messages.rs  keys.rs  lib.rs  metrics.rs
node/: Cargo.toml
node/src/: api.rs  lib.rs  main.rs  network_client.rs  node.rs  tests.rs
pkg/: package.json  tace_webclient.d.ts  tace_webclient.js  tace_webclient_bg.wasm  tace_webclient_bg.wasm.d.ts
public/: index.html  main.js  styles.css
tests/: Cargo.toml  INTEGRATION_FIXED.md  STATUS.md  test_data_transfer.sh
tests/src/: README.md  lib.rs
tests/src/integration/: invariants.rs  mod.rs  network_simulator.rs  scenarios.rs  test_harness.rs  timing_control.rs
tests/tests/: data_operations_test.rs  debug_stabilization_test.rs  debug_two_node_stabilization.rs  debug_two_node_test.rs  debug_wait_for_stabilization_test.rs  fixed_integration_test.rs  integration_basic_network.rs  integration_comprehensive.rs  integration_step_by_step.rs  network_size_estimation_test.rs  progressive_integration_test.rs  simple_data_test.rs  simple_test.rs  test_harness_basic.rs  working_integration_test.rs
webclient/: Cargo.toml  nginx.conf
webclient/public/: index.html  main.js  styles.css  tace_webclient.js  tace_webclient_bg.wasm
webclient/src/: lib.rs
