[package]
name = "tace_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = "1.0"
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6"
http-body-util = "0.1"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tace_lib = { path = "../lib" }
log = "0.4"
env_logger = "0.10"
bytes = "1.0"

[lints]
workspace = true
