[package]
name = "tace_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
p256 = { version = "0.13.2", features = ["ecdsa-core", "ecdh"] }
ecdsa = { version = "0.16.9", features = ["signing"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
