[package]
name = "tace_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand_core = "0.6"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdh"] }
ecdsa = "0.16"
aes-gcm = "0.10"
hkdf = "0.12"
