[package]
name = "tace_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tace_lib = { path = "../lib" }
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.12"
