[package]
name = "tace_node"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bincode = "1.3.3"
env_logger = "0.11"
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tace_lib = { path = "../lib" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockall = "0.12"

[lints]
workspace = true
